--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind Features</title>
     <link rel="stylesheet" href="./output/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;0,900;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,900;1,100&display=swap"
+            rel="stylesheet">
 </head>
 <body>
-    <div class="w-32 bg-gray-600 h-32 m-12 text-white "> Tunde</div>
+    <h1 class="text-4xl font-poppins">GEmtundesssa</h1>
+    <h1 class="text-4xl font-roboto">GEmtundea</h1>
+    <script src="/app.js"></script>
 </body>
 </html>
