--- a/index.html
+++ b/index.html
@@ -15,9 +15,48 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;0,900;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,900;1,100&display=swap"
             rel="stylesheet">
 </head>
-<body>
-    <h1 class="text-4xl font-poppins">GEmtundesssa</h1>
-    <h1 class="text-4xl font-roboto">GEmtundea</h1>
+<body class="font-poppins text-gray-600">
+    <!-- Header -->
+   <nav class="bg-slate-300 shadow-sm shadow-slate-300 ">
+     <div class="container mx-auto px-4 py-3 flex items-center">
+        <a href="#">
+               <img src="/Images/easyshop.png" alt="logo" />
+        </a>
+        <div class="ml-12 flex">
+            <a href="#" class="flex items-center font-semibold text-md hover:text-blue-700 transition">
+                <span class="mr-2"> <i class="fas fa-home"></i></span> Home
+            </a>
+        </div>
+        <div class="ml-12 flex">
+            <a href="#" class="flex items-center font-semibold text-md hover:text-blue-700 transition">
+                <span class="mr-2"> <i class="fas fa-file-alt"></i></span> About
+            </a>
+        </div>
+        <div class="ml-12 flex">
+            <a href="#" class="flex items-center font-semibold text-md hover:text-blue-700 transition">
+                <span class="mr-2"> <i class="fas fa-phone"></i></span> Contact
+            </a>
+        </div>
+
+        <!-- search bar -->
+           <div class="relative ml-auto">
+              <span class="absolute left-3 top-3 text-sm text-gray-600">
+                <i class="fas fa-search"></i>
+              </span>
+              <input type="text" placeholder="search..." class="block w-full rounded-3xl pl-11 pr-2  py-2 focus:outline-none bg-gray-200 text-sm text-gray-600 shadow-xl shadow-slate-300" />
+           </div>
+        <!-- search bar -->
+
+        <div class="ml-5">
+            <a href="#" class="flex items-center font-semibold text-md text-gray-900 hover:text-blue-700 transition">
+        <span class="mr-2">
+            <i class="fas fa-user"></i>
+        </span> Login/Register
+            </a>
+        </div>
+     </div>
+   </nav>
+   <!-- Header End -->
     <script src="/app.js"></script>
 </body>
 </html>
