--- a/index.html
+++ b/index.html
@@ -57,6 +57,30 @@
      </div>
    </nav>
    <!-- Header End -->
+
+   <!-- Main-Content Starts -->
+     
+      <div class="py-12 bg-gray-200">
+         <div class="container mx-auto px-4 flex">
+                       <!-- Left Sidebar starts -->
+                       <div class="w-3/12">
+                        <div class="bg-white shadow-sm shadow-white rounded-xl p-4 mr-4">
+                            <h3 class="text-xl font-semibold text-gray-700 font-roboto"> Categories</h3>
+                        </div>
+                       </div>
+                       <!-- Left Sidebar ends -->
+
+                       <!-- Middle Content starts -->
+                       <div class="w-6/12 bg-white shadow-sm shadow-white rounded-xl py-12 mr-4"></div>
+                       <!-- Middle Content ends -->
+                       <!-- Right Sidebar starts -->
+                        <div class="w-3/12 bg-white shadow-sm shadow-white rounded-xl py-12"></div>
+                       <!-- Right Sidebar ends -->
+         </div>
+
+      </div>
+
+   <!-- Main-Content Endss -->
     <script src="/app.js"></script>
 </body>
 </html>
