--- a/index.html
+++ b/index.html
@@ -66,6 +66,90 @@
                        <div class="w-3/12">
                         <div class="bg-white shadow-sm shadow-white rounded-xl p-4 mr-4">
                             <h3 class="text-xl font-semibold text-gray-700 font-roboto"> Categories</h3>
+                            
+                            <div class="text-gray-700 space-y-2 mt-4">
+                                <a href="#" class="flex items-center font-semibold leading-4 hover:text-blue-800 transition uppercase" >
+                                    <span class="mr-2">
+                                       <i class="far fa-folder-open"></i>
+                                    </span>
+                                    <span>Beauty</span>
+                                    <span class="font-normal ml-auto">(12) </span>
+
+                                </a>
+                                <a href="#" class="flex items-center font-semibold leading-4 hover:text-blue-800 transition uppercase" >
+                                    <span class="mr-2">
+                                       <i class="far fa-folder-open"></i>
+                                    </span>
+                                    <span>Business</span>
+                                    <span class="font-normal ml-auto">(21) </span>
+
+                                </a>
+                                <a href="#" class="flex items-center font-semibold leading-4 hover:text-blue-800 transition uppercase" >
+                                    <span class="mr-2">
+                                       <i class="far fa-folder-open"></i>
+                                    </span>
+                                    <span>Fashion</span>
+                                    <span class="font-normal ml-auto">(33) </span>
+
+                                </a>
+                                <a href="#" class="flex items-center font-semibold leading-4 hover:text-blue-800 transition uppercase" >
+                                    <span class="mr-2">
+                                       <i class="far fa-folder-open"></i>
+                                    </span>
+                                    <span>Nature</span>
+                                    <span class="font-normal ml-auto">(5) </span>
+
+                                </a>
+                                <a href="#" class="flex items-center font-semibold leading-4 hover:text-blue-800 transition uppercase" >
+                                    <span class="mr-2">
+                                       <i class="far fa-folder-open"></i>
+                                    </span>
+                                    <span>Foody</span>
+                                    <span class="font-normal ml-auto">(26) </span>
+
+                                </a>
+                                <a href="#" class="flex items-center font-semibold leading-4 hover:text-blue-800 transition uppercase" >
+                                    <span class="mr-2">
+                                       <i class="far fa-folder-open"></i>
+                                    </span>
+                                    <span>Music</span>
+                                    <span class="font-normal ml-auto">(14) </span>
+
+                                </a>
+                                <a href="#" class="flex items-center font-semibold leading-4 hover:text-blue-800 transition uppercase" >
+                                    <span class="mr-2">
+                                       <i class="far fa-folder-open"></i>
+                                    </span>
+                                    <span>News</span>
+                                    <span class="font-normal ml-auto">(7) </span>
+
+                                </a>
+                                <a href="#" class="flex items-center font-semibold leading-4 hover:text-blue-800 transition uppercase" >
+                                    <span class="mr-2">
+                                       <i class="far fa-folder-open"></i>
+                                    </span>
+                                    <span>People</span>
+                                    <span class="font-normal ml-auto">(9) </span>
+
+                                </a>
+                                <a href="#" class="flex items-center font-semibold leading-4 hover:text-blue-800 transition uppercase" >
+                                    <span class="mr-2">
+                                       <i class="far fa-folder-open"></i>
+                                    </span>
+                                    <span>Sport</span>
+                                    <span class="font-normal ml-auto">(2) </span>
+
+                                </a>
+                                <a href="#" class="flex items-center font-semibold leading-4 hover:text-blue-800 transition uppercase" >
+                                    <span class="mr-2">
+                                       <i class="far fa-folder-open"></i>
+                                    </span>
+                                    <span>Technology</span>
+                                    <span class="font-normal ml-auto">(4) </span>
+
+                                </a>
+                            </div>
+
                         </div>
                        </div>
                        <!-- Left Sidebar ends -->
