--- a/index.html
+++ b/index.html
@@ -149,8 +149,99 @@
 
                                 </a>
                             </div>
-
                         </div>
+                        <!-- Start Random Post -->
+                                  <div class="bg-white shadow-sm shadow-white rounded-xl p-4 mr-4 mt-4">
+                                        <h3 class="text-xl font-semibold text-gray-700 font-roboto"> Random Posts</h3>
+                                        <div class="mt-4">
+                                            <a href="#" class="flex group mt-4">
+                                                 <div class="flex-shrink-0">
+                                                        <img src="/Images/pic1.png" class="h-14 w-20 rounded object-cover hover:brightness-50" />
+                                                 </div>
+                                                 <div class="flex-grow pl-3">
+                                                        <h5 class="text-md font-semibold leading-5 block font-roboto transition group-hover:text-blue-500"> 
+                                                            Team Arsenal is in great form at this time
+                                                        </h5>
+                                                        <div class="flex text-gray-400 text-sm items-center">
+                                                            <span class="mr-1 text-xs">
+                                                                <i class="far fa-clock"></i>
+                                                            </span>
+                                                            11 June,2023
+                                                        </div>
+                                                </div>
+
+                                            </a>
+                                            <a href="#" class="flex group mt-4">
+                                                 <div class="flex-shrink-0">
+                                                        <img src="/Images/pic2.png" class="h-14 w-20 rounded object-cover hover:brightness-50" />
+                                                 </div>
+                                                 <div class="flex-grow pl-3">
+                                                        <h5 class="text-md font-semibold leading-5 block font-roboto transition group-hover:text-blue-500"> 
+                                                            Team Arsenal is in great form at this time
+                                                        </h5>
+                                                        <div class="flex text-gray-400 text-sm items-center">
+                                                            <span class="mr-1 text-xs">
+                                                                <i class="far fa-clock"></i>
+                                                            </span>
+                                                            11 June,2023
+                                                        </div>
+                                                </div>
+
+                                            </a>
+                                            <a href="#" class="flex group mt-4">
+                                                 <div class="flex-shrink-0">
+                                                        <img src="/Images/pic3.png" class="h-14 w-20 rounded object-cover hover:brightness-50" />
+                                                 </div>
+                                                 <div class="flex-grow pl-3">
+                                                        <h5 class="text-md font-semibold leading-5 block font-roboto transition group-hover:text-blue-500"> 
+                                                            Team Arsenal is in great form at this time
+                                                        </h5>
+                                                        <div class="flex text-gray-400 text-sm items-center">
+                                                            <span class="mr-1 text-xs">
+                                                                <i class="far fa-clock"></i>
+                                                            </span>
+                                                            11 June,2023
+                                                        </div>
+                                                </div>
+
+                                            </a>
+                                            <a href="#" class="flex group mt-4">
+                                                 <div class="flex-shrink-0">
+                                                        <img src="/Images/pic4.png" class="h-14 w-20 rounded object-cover hover:brightness-50" />
+                                                 </div>
+                                                 <div class="flex-grow pl-3">
+                                                        <h5 class="text-md font-semibold leading-5 block font-roboto transition group-hover:text-blue-500"> 
+                                                            Team Arsenal is in great form at this time
+                                                        </h5>
+                                                        <div class="flex text-gray-400 text-sm items-center">
+                                                            <span class="mr-1 text-xs">
+                                                                <i class="far fa-clock"></i>
+                                                            </span>
+                                                            11 June,2023
+                                                        </div>
+                                                </div>
+
+                                            </a>
+                                            <a href="#" class="flex group mt-4">
+                                                 <div class="flex-shrink-0">
+                                                        <img src="/Images/pic5.png" class="h-14 w-20 rounded object-cover hover:brightness-50" />
+                                                 </div>
+                                                 <div class="flex-grow pl-3">
+                                                        <h5 class="text-md font-semibold leading-5 block font-roboto transition group-hover:text-blue-500"> 
+                                                            Team Arsenal is in great form at this time
+                                                        </h5>
+                                                        <div class="flex text-gray-400 text-sm items-center">
+                                                            <span class="mr-1 text-xs">
+                                                                <i class="far fa-clock"></i>
+                                                            </span>
+                                                            11 June,2023
+                                                        </div>
+                                                </div>
+
+                                            </a>
+                                        </div>
+                                  </div>
+                        <!-- End Random Post -->
                        </div>
                        <!-- Left Sidebar ends -->
 
