--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
          <div class="container mx-auto px-4 flex">
                        <!-- Left Sidebar starts -->
                        <div class="w-3/12">
-                        <div class="bg-white shadow-sm shadow-white rounded-xl p-4 mr-4">
+                        <div class="bg-white shadow-sm shadow-white rounded-xl p-4">
                             <h3 class="text-xl font-semibold text-gray-700 font-roboto"> Categories</h3>
                             
                             <div class="text-gray-700 space-y-2 mt-4">
@@ -151,7 +151,7 @@
                             </div>
                         </div>
                         <!-- Start Random Post -->
-                                  <div class="bg-white shadow-sm shadow-white rounded-xl p-4 mr-4 mt-4">
+                                  <div class="bg-white shadow-sm shadow-white rounded-xl p-4 mt-4">
                                         <h3 class="text-xl font-semibold text-gray-700 font-roboto"> Random Posts</h3>
                                         <div class="mt-4">
                                             <a href="#" class="flex group mt-4">
@@ -246,7 +246,161 @@
                        <!-- Left Sidebar ends -->
 
                        <!-- Middle Content starts -->
-                       <div class="w-6/12 bg-white shadow-sm shadow-white rounded-xl py-12 mr-4"></div>
+                       <div class="xl:w-6/12 lg:w-9/12 w-full xl:ml-6 lg:mr-6"> 
+                       <div class="flex bg-white px-3 py-4 justify-between items-center rounded-sm ">
+                         <h5 class="text-base uppercase font-roboto font-semibold">Business</h5>
+                         <a href="#" class="py-2 px-4 text-white rounded-md uppercase text-sm bg-blue-500 border border-blue-500 hover:bg-transparent transition hover:text-blue-500">
+                              See More
+                         </a>
+                       </div>
+                       <!--Start Main Blog Post -->
+                        <div class="rounded-sm overflow-hidden bg-white shadow-sm">
+                                <a href="#" class="block rounded-md overflow-hidden">
+                                        <img src="/Images/pic5.png" class="w-full h-96 object-cover transform hover:scale-110 transition duration-500" />
+                                </a>
+                                <div class="p-4 pb-4">
+                                   <a href="#">
+                                         <h2 class="block text-xl font-semibold text-gray-700 hover:text-blue-500 transition font-roboto  ">
+                                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora praesentium eveniet voluptatum!
+                                         </h2>
+                                   </a>
+                                   <p class="text-gray-500 text-sm mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cumque quas inventore!</p>
+                                 <div class="mt-3 flex space-x-4">
+                                      <div class="flex text-gray-400 text-sm items-center">
+                                            <span class="mr-2 text-xs">
+                                                <i class="far fa-user"></i>
+                                            </span>
+                                            Bloging Tips
+                                      </div>
+                                      <div class="flex text-gray-400 text-sm items-center">
+                                            <span class="mr-2 text-xs">
+                                                <i class="far fa-clock"></i>
+                                            </span>
+                                             December 25, 2020
+                                      </div>
+                                 </div>
+                                </div>
+                        </div>
+                       <!--End Main Blog Post -->
+
+                       <!-- Start All Post Main -->
+                       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
+                           <div class="rounded-xl bg-white p-4 pb-5 shadow-sm">
+                                    <a href="#" class="block rounded-md overflow-hidden">
+                                        <img src="/Images/pic2.png" class="w-full h-60 object-cover transform hover:scale-110 transition duration-500" />
+                                    </a>
+                                    <div class="mt-4">
+                                        <a href="#">
+                                            <h2 class="block text-md font-semibold text-gray-700 hover:text-blue-500 transition font-roboto  ">
+                                               Tempora praesentium eveniet voluptatum!
+                                            </h2>
+                                        </a>
+                                        <p class="text-gray-500 text-sm mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cumque quas
+                                            inventore!</p>
+                                        <div class="mt-3 flex space-x-4">
+                                            <div class="flex text-gray-400 text-sm items-center">
+                                                <span class="mr-2 text-xs">
+                                                    <i class="far fa-user"></i>
+                                                </span>
+                                                Bloging Tips
+                                            </div>
+                                        <div class="flex text-gray-400 text-sm items-center">
+                                            <span class="mr-2 text-xs">
+                                                <i class="far fa-clock"></i>
+                                            </span>
+                                            Dec 25, 2020
+                                        </div>
+                                           
+                                        </div>
+                                    </div>
+                           </div>
+                           <div class="rounded-xl bg-white p-4 pb-5 shadow-sm">
+                                    <a href="#" class="block rounded-md overflow-hidden">
+                                        <img src="/Images/pic3.png" class="w-full h-60 object-cover transform hover:scale-110 transition duration-500" />
+                                    </a>
+                                    <div class="mt-4">
+                                        <a href="#">
+                                            <h2 class="block text-md font-semibold text-gray-700 hover:text-blue-500 transition font-roboto  ">
+                                               Tempora praesentium eveniet voluptatum!
+                                            </h2>
+                                        </a>
+                                        <p class="text-gray-500 text-sm mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cumque quas
+                                            inventore!</p>
+                                        <div class="mt-3 flex space-x-4">
+                                            <div class="flex text-gray-400 text-sm items-center">
+                                                <span class="mr-2 text-xs">
+                                                    <i class="far fa-user"></i>
+                                                </span>
+                                                Bloging Tips
+                                            </div>
+                                        <div class="flex text-gray-400 text-sm items-center">
+                                            <span class="mr-2 text-xs">
+                                                <i class="far fa-clock"></i>
+                                            </span>
+                                            May 21, 2020
+                                        </div>
+                                        </div>
+                                    </div>
+                           </div>
+                           <div class="rounded-xl bg-white p-4 pb-5 shadow-sm">
+                                    <a href="#" class="block rounded-md overflow-hidden">
+                                        <img src="/Images/pic4.png" class="w-full h-60 object-cover transform hover:scale-110 transition duration-500" />
+                                    </a>
+                                    <div class="mt-4">
+                                        <a href="#">
+                                            <h2 class="block text-md font-semibold text-gray-700 hover:text-blue-500 transition font-roboto  ">
+                                               Tempora praesentium eveniet voluptatum!
+                                            </h2>
+                                        </a>
+                                        <p class="text-gray-500 text-sm mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cumque quas
+                                            inventore!</p>
+                                        <div class="mt-3 flex space-x-4">
+                                            <div class="flex text-gray-400 text-sm items-center">
+                                                <span class="mr-2 text-xs">
+                                                    <i class="far fa-user"></i>
+                                                </span>
+                                                Bloging Tips
+                                            </div>
+                                        <div class="flex text-gray-400 text-sm items-center">
+                                            <span class="mr-2 text-xs">
+                                                <i class="far fa-clock"></i>
+                                            </span>
+                                            Jan 12, 2020
+                                        </div>
+                                        </div>
+                                    </div>
+                           </div>
+                           <div class="rounded-xl bg-white p-4 pb-5 shadow-sm">
+                                    <a href="#" class="block rounded-md overflow-hidden">
+                                        <img src="/Images/pic5.png" class="w-full h-60 object-cover transform hover:scale-110 transition duration-500" />
+                                    </a>
+                                    <div class="mt-4">
+                                        <a href="#">
+                                            <h2 class="block text-md font-semibold text-gray-700 hover:text-blue-500 transition font-roboto  ">
+                                               Tempora praesentium eveniet voluptatum!
+                                            </h2>
+                                        </a>
+                                        <p class="text-gray-500 text-sm mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi cumque quas
+                                            inventore!</p>
+                                        <div class="mt-3 flex space-x-4">
+                                            <div class="flex text-gray-400 text-sm items-center">
+                                                <span class="mr-2 text-xs">
+                                                    <i class="far fa-user"></i>
+                                                </span>
+                                                Bloging Tips
+                                            </div>
+                                        <div class="flex text-gray-400 text-sm items-center">
+                                            <span class="mr-2 text-xs">
+                                                <i class="far fa-clock"></i>
+                                            </span>
+                                            Feb 11, 2020
+                                        </div>
+                                        </div>
+                                    </div>
+                           </div>
+                       </div>
+                       <!-- End All Post Main -->
+                    </div>
                        <!-- Middle Content ends -->
                        <!-- Right Sidebar starts -->
                         <div class="w-3/12 bg-white shadow-sm shadow-white rounded-xl py-12"></div>
