--- a/index.html
+++ b/index.html
@@ -403,7 +403,31 @@
                     </div>
                        <!-- Middle Content ends -->
                        <!-- Right Sidebar starts -->
-                        <div class="w-3/12 bg-white shadow-sm shadow-white rounded-xl py-12"></div>
+                        <div class="w-full lg:w-3/12 mt-8 lg:mt-0">
+                                <div class="w-full bg-white shadow-sm shadow-white rounded-xl p-4">
+                                    <h3 class="text-xl font-semibold text-gray-700 font-roboto"> Social Plugin</h3>
+                                
+                                    <!-- social media -->
+                                         <div class="flex gap-2 mt-4">
+                                            <a href="#" class="w-8 h-8 rounded-sm flex items-center justify-center border border-gray-400 text-base">
+                                                <i class="fab fa-facebook-f"></i>
+                                            </a>
+                                            <a href="#" class="w-8 h-8 rounded-sm flex items-center justify-center border border-gray-400 text-base">
+                                                <i class="fab fa-twitter"></i>
+                                            </a>
+                                            <a href="#" class="w-8 h-8 rounded-sm flex items-center justify-center border border-gray-400 text-base">
+                                                <i class="fab fa-instagram"></i>
+                                            </a>
+                                            <a href="#" class="w-8 h-8 rounded-sm flex items-center justify-center border border-gray-400 text-base">
+                                                <i class="fab fa-linkedin-in"></i>
+                                            </a>
+                                            <a href="#" class="w-8 h-8 rounded-sm flex items-center justify-center border border-gray-400 text-base">
+                                                <i class="fab fa-youtube"></i>
+                                            </a>
+                                         </div>
+                                    <!-- social media -->
+                                </div>
+                        </div>
                        <!-- Right Sidebar ends -->
          </div>
 
