--- a/index.html
+++ b/index.html
@@ -520,6 +520,46 @@
                                     </div>
                                 </div>
                                <!-- End Popular Posts -->
+
+                               <!-- Start Tag Post -->
+                                <div class="w-full bg-white shadow-sm rounded-xl p-4 mt-4">
+                                        <h3 class="text-xl font-semibold text-gray-700 font-roboto"> Tags</h3>
+                                        <div class="flex items-center flex-wrap gap-2 mt-4">
+                                            <a href="#"
+                                                class="py-2 px-4 text-gray-700 rounded-md uppercase text-sm bg-white border border-gray-500 hover:bg-transparent transition hover:text-gray-100 hover:bg-blue-500">
+                                                Beauty
+                                            </a>
+                                            <a href="#"
+                                                class="py-2 px-4 text-gray-700 rounded-md uppercase text-sm bg-white border border-gray-500 hover:bg-transparent transition hover:text-gray-100 hover:bg-blue-500">
+                                                Business
+                                            </a>
+                                            <a href="#"
+                                                class="py-2 px-4 text-gray-700 rounded-md uppercase text-sm bg-white border border-gray-500 hover:bg-transparent transition hover:text-gray-100 hover:bg-blue-500">
+                                                SPort
+                                            </a>
+                                            <a href="#"
+                                                class="py-2 px-4 text-gray-700 rounded-md uppercase text-sm bg-white border border-gray-500 hover:bg-transparent transition hover:text-gray-100 hover:bg-blue-500">
+                                                Php
+                                            </a>
+                                            <a href="#"
+                                                class="py-2 px-4 text-gray-700 rounded-md uppercase text-sm bg-white border border-gray-500 hover:bg-transparent transition hover:text-gray-100 hover:bg-blue-500">
+                                                Computer
+                                            </a>
+                                            <a href="#"
+                                                class="py-2 px-4 text-gray-700 rounded-md uppercase text-sm bg-white border border-gray-500 hover:bg-transparent transition hover:text-gray-100 hover:bg-blue-500">
+                                                politics
+                                            </a>
+                                            <a href="#"
+                                                class="py-2 px-4 text-gray-700 rounded-md uppercase text-sm bg-white border border-gray-500 hover:bg-transparent transition hover:text-gray-100 hover:bg-blue-500">
+                                                Coding
+                                            </a>
+                                            <a href="#"
+                                                class="py-2 px-4 text-gray-700 rounded-md uppercase text-sm bg-white border border-gray-500 hover:bg-transparent transition hover:text-gray-100 hover:bg-blue-500">
+                                                Web app
+                                            </a>
+                                        </div>
+                                </div>
+                               <!-- End Tag Post -->
                         </div>
                        <!-- Right Sidebar ends -->
          </div>
