--- a/index.html
+++ b/index.html
@@ -565,7 +565,9 @@
          </div>
 
       </div>
-
+<footer class="border-t py-4">
+<p class="text-center text-sm">Copyright @ 2022 <span class="font-semibold ">ELearning</span> All Right Reserved</p>
+</footer>
    <!-- Main-Content Endss -->
     <script src="/app.js"></script>
 </body>
