--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         </span> Login/Register
             </a>
         </div>
+        <div class="text-xl text-gray-700 cursor-pointer block md:hidden ml-4 hover:text-blue-700 transition">
+            <i class="fas fa-bars"></i>
+        </div>
      </div>
    </nav>
    <!-- Header End -->
@@ -61,9 +64,9 @@
    <!-- Main-Content Starts -->
      
       <div class="py-12 bg-gray-200">
-         <div class="container mx-auto px-4 flex">
+         <div class="container mx-auto px-4 flex-wrap md:flex-nowrap">
                        <!-- Left Sidebar starts -->
-                       <div class="w-3/12">
+                       <div class="w-3/12 hidden md:block">
                         <div class="bg-white shadow-sm shadow-white rounded-xl p-4">
                             <h3 class="text-xl font-semibold text-gray-700 font-roboto"> Categories</h3>
                             
