--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="#">
                <img src="/Images/easyshop.png" alt="logo" />
         </a>
+         <div class=" xl:flex hidden  space-x-5">
         <div class="ml-12 flex">
             <a href="#" class="flex items-center font-semibold text-md hover:text-blue-700 transition">
                 <span class="mr-2"> <i class="fas fa-home"></i></span> Home
@@ -37,9 +38,9 @@
                 <span class="mr-2"> <i class="fas fa-phone"></i></span> Contact
             </a>
         </div>
-
+</div>
         <!-- search bar -->
-           <div class="relative ml-auto">
+           <div class="relative ml-auto xl:block hidden">
               <span class="absolute left-3 top-3 text-sm text-gray-600">
                 <i class="fas fa-search"></i>
               </span>
@@ -54,7 +55,7 @@
         </span> Login/Register
             </a>
         </div>
-        <div class="text-xl text-gray-700 cursor-pointer block md:hidden ml-4 hover:text-blue-700 transition">
+        <div class="text-xl text-gray-700 cursor-pointer block md:hidden ml-4 hover:text-blue-700 transition" id="open_sidebar">
             <i class="fas fa-bars"></i>
         </div>
      </div>
@@ -64,9 +65,9 @@
    <!-- Main-Content Starts -->
      
       <div class="py-12 bg-gray-200">
-         <div class="container mx-auto px-4 flex-wrap md:flex-nowrap">
+         <div class="container mx-auto px-4 flex flex-wrap xl:flex-nowrap">
                        <!-- Left Sidebar starts -->
-                       <div class="w-3/12 hidden md:block">
+                       <div class="w-3/12 hidden xl:block">
                         <div class="bg-white shadow-sm shadow-white rounded-xl p-4">
                             <h3 class="text-xl font-semibold text-gray-700 font-roboto"> Categories</h3>
                             
@@ -568,6 +569,12 @@
          </div>
 
       </div>
+
+      <!-- Sidebar Mobile Menu -->
+      <div class="fixed w-full bg-black bg-opacity-25 left-0 top-0 opacity-0 invisible transition-all duration-500 xl:hidden" id="sidebar_wrapper">
+        <div class="fixed top-0 w-72 h-full bg-white shadow-sm flex flex-col transition-all duration-500 -left-80">Sidebar</div>
+      </div>
+      <!-- Sidebar Mobile Menu -->
 <footer class="border-t py-4">
 <p class="text-center text-sm">Copyright @ 2022 <span class="font-semibold ">ELearning</span> All Right Reserved</p>
 </footer>
